// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WIDTHS+SWITCH define sheet NATIVE 1`] = `
Object {
  "root": Array [
    Object {
      "conditions": Array [
        Object {
          "interval": Array [
            0,
            640,
          ],
          "type": "$widths",
        },
      ],
      "items": Array [
        "margin: 0 /*sheet.root/$widths.0-640*/",
      ],
    },
    Object {
      "conditions": Array [
        Object {
          "interval": Array [
            0,
            640,
          ],
          "type": "$widths",
        },
        Object {
          "case": "isClosed",
          "type": "$switch",
        },
      ],
      "items": Array [
        "backgroundColor: gray /*sheet.root/$widths.0-640/$switch.isClosed*/",
      ],
    },
    Object {
      "conditions": Array [
        Object {
          "interval": Array [
            640,
            1024,
          ],
          "type": "$widths",
        },
      ],
      "items": Array [
        "margin: 10 /*sheet.root/$widths.640-1024*/",
      ],
    },
    Object {
      "conditions": Array [
        Object {
          "interval": Array [
            1024,
            0,
          ],
          "type": "$widths",
        },
      ],
      "items": Array [
        "margin: 20 /*sheet.root/$widths.1024-*/",
      ],
    },
  ],
}
`;

exports[`WIDTHS+SWITCH define sheet WEB 1`] = `
Object {
  "root": Array [
    Array [
      "@media (max-width: 639px).b { margin:0 /*sheet.root/$widths.0-640*/ }",
    ],
    Object {
      "conditions": Array [
        Object {
          "case": "isClosed",
          "type": "$switch",
        },
      ],
      "items": Array [
        "@media (max-width: 639px).a { background-color:gray /*sheet.root/$widths.0-640/$switch.isClosed*/ }",
      ],
    },
    Array [
      "@media (min-width: 640px) and (max-width: 1023px).c { margin:10px /*sheet.root/$widths.640-1024*/ }",
    ],
    Array [
      "@media (min-width: 1024px).d { margin:20px /*sheet.root/$widths.1024-*/ }",
    ],
  ],
}
`;
